--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,14 @@ code {
   box-shadow: 0px 0px 3px 1px #ccc;
 }
 
+.card-style-image-hp {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-top: 0;
+  margin-left: 40%;
+}
+
 .card-style-info {
   margin-top: 10px;
   min-height: 100px;
@@ -73,4 +81,8 @@ code {
   display: grid;
   grid-template-rows: 60px 150px 150px;
   justify-content: space-between;
+}
+
+.about {
+  padding: 30px 100px 50px 100px;
 }
