--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,9 @@ code {
   background-image: url("./assets/subtle.jpg");
   background-repeat: repeat;
 }
-
+.about-titles {
+  margin-left: 10%;
+}
 
 .card-style {
   margin: 20px;
@@ -34,11 +36,11 @@ code {
 }
 
 .card-style-image-hp {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  margin-top: 0;
-  margin-left: 40%;
+  padding-left: 50px;
+  margin-top: 10%;
 }
 
 .card-style-info {
@@ -66,7 +68,7 @@ code {
 }
 
 .header-color {
-  background-color: #CC9999;
+  background-color: #CE9C9C;
   border-color: #343a40;
 }
 
@@ -95,9 +97,9 @@ code {
 
 .about {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 15px;
-  padding: 45px 100px 100px 100px;
+  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-gap: 20px;
+  padding: 45px 100px 100px 200px;
 }
 
 .btn-secondary{
@@ -120,7 +122,28 @@ code {
   display: grid;
   grid-gap: 10px;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+ 
 }
+
+.header {
+  background-image: url("https://www.wallpapertip.com/wmimgs/220-2208351_day-vintage-new-york-street-photo-wallpaper-hd.jpg");
+  margin-bottom: 0%;
+  background-repeat: repeat;
+}
+
+.header-title {
+  margin-left: 20%;
+  color: white;
+  margin-bottom: 50px;
+}
+
+.header-jumbo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-left: 50%;
+  margin-top: 5%;
+}
+
 
 
 .contact-buttons > * {
@@ -131,12 +154,16 @@ code {
 .contact-title {
   padding: 20px 30px 95px 130px;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-rows: 120px 1fr;
+  margin-left: 100px;
 }
 footer {
-  background-image: url("./assets/subtle.jpg");
   background-repeat: repeat;
 }
 .contact-header {
   padding-bottom: 0px !important;
+}
+.intro-home {
+  text-align: center;
+  padding: 5%;
 }
